# site-optimizer

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
release/: latest.json
sidecar/: optimizer.js  package-lock.json  package.json
src/: App.css  App.tsx  App.tsx.bak
src-tauri/: Cargo.toml  tauri.conf.json  windows-installer-hooks.nsh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
