[package]
name = "site-optimizer"
version = "0.6.0"
description = "Site media optimizer"
authors = ["Creed1k3"]
edition = "2021"

[[bin]]
name = "site-optimizer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.55"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
